last push before moving item_search to invoice#show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,13 @@
  }
 
  //form-elements  display: inline-block;  #563d7c
+ .bg-soft-a-stripe {
+   background: #F6F6F6 !important; // F6F6F6
+ }
+ .bg-soft-b-stripe {
+   background: #F3F1F5 !important; //EFF8FF
+ }
+
  .bg-light-blue {
    background: #e3f2fd !important;
  }
