--- a/app/views/item_fields/_edit.html.erb
+++ b/app/views/item_fields/_edit.html.erb
@@ -1,8 +1,10 @@
 <%= form_with model: item, url: item_field_path(item), id: dom_ref('edit-item-fields', item) do |f| %>
   <div class="form">
     <%= text_field_tag "card_id", nil, class: "collapse", id: 'caret-id' %>
-    <% rows.each do |card_id, card| %>
-      <div class="card bg-gray-d p-1 mb-1">
+    <% rows.each_with_index do |(card_id, card), i| %>
+
+      <div class="card border-0 px-1 py-0 mb-1 <%=table_strip(i)%>" data-target=".card-body">
+        <!-- <hr> -->
         <div class="card-header border-0 bg-transparent pt-1 pb-1 pl-0 pr-0">
           <div class="form-row">
             <% card[:header].each do |f_hsh| %>
@@ -10,7 +12,7 @@
             <% end %>
           </div>
         </div>
-        <div class="card-body pt-1 pb-1 pl-0 pr-0 bg-gray-d border border-white border-top-0 rounded-bottom collapse">
+        <div class="card-body pt-1 pb-1 pl-0 pr-0 bg-white border border-white border-top-0 rounded-bottom collapse">
           <div class="form-row">
             <% card[:body].each do |f_hsh| %>
               <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: dom_ref(:show, card_id), card: card, i: f_hsh[:i], context: 'body' %>
