--- a/app/views/suppliers/_supplier.html.erb
+++ b/app/views/suppliers/_supplier.html.erb
@@ -1,4 +1,4 @@
-<div class="card p-1 mb-1 bg-light border-0" id="<%= supplier.supplier_name %>">
+<div class="card p-1 mb-1 border-0 <%=table_strip(i)%>" id="<%= supplier.supplier_name %>">
   <div class="card-header border-0 bg-transparent pt-0 pb-0 pl-0 pr-0">
     <div class="row">
       <div class="col-auto">
