--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,18 +1,18 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: dom_ref('edit-item', item) do |f| %>
   <div class="form">
-    <div class="card bg-gray-d p-0 mb-1">
+    <div class="card border-0 p-0 mb-1 <%=table_strip(1)%>">
       <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "collapse" %>
 
-      <div class="form-row pl-1 ml-0 mb-2">
+      <div class="form-row pl-1 py-0 ml-0 mb-1">
 
-        <div class="col-3 pl-4 pr-2 pt-2">
+        <div class="col-3 pl-4 pr-2 py-1">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'artist' %>
             <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: item.artist.try(:id)}, class: boot_classes(:input, 'field-param') %>
           </div>
         </div>
 
-        <div class="col-4 pt-2 pl-0">
+        <div class="col-4 py-1 pl-0">
           <div class="input-group input-group-sm">
             <%= render 'items/title_toggle' %>
             <%= render 'items/title', titles: titles %>
@@ -20,14 +20,14 @@
           </div>
         </div>
 
-        <div class="col-2 pt-2">
+        <div class="col-2 py-1">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'retail' %>
             <%= f.number_field :retail, class: boot_classes(:input, 'field-param') %>
           </div>
         </div>
 
-        <div class="col-2 pt-2 pr-3">
+        <div class="col-2 py-1 pr-3">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'qty' %>
             <%= f.number_field :qty, class: boot_classes(:input, 'field-param') %>
