--- a/app/views/table_skus/_item.html.erb
+++ b/app/views/table_skus/_item.html.erb
@@ -1,21 +1,20 @@
-<div class="card p-1 mb-1 bg-light border-0" id="<%= dom_ref(:card, item) %>">
+<div class="card p-1 mb-1 bg-disabled border-0" id="<%= dom_ref(:card, item) %>" data-target="#<%= dom_ref('navbar-forms', item) %>">
   <a href="<%= invoice_table_sku_path(item.invoice, item) %>" data-remote="true" class="show-body collapse" type="button"></a>
   <div class="card-header bg-transparent border-0 pt-0 pb-0 pr-0 mr-0">
     <div class="row align-items-center">
 
-      <div class="col-auto border-0 ml-0 px-0 mr-1">
-        <%= render "invoices/items/caret", card_id: dom_ref(:index, item), body: true, i: 0, context: 'header' %>
-        <a href="<%= invoice_item_path(item.invoice, item) %>" class="btn btn-sm btn-link border-0 pl-0 ml-1" type="button">
+      <div class="col-auto ml-0 pl-0 mr-0 pr-0">
+        <a href="<%= invoice_item_path(item.invoice, item) %>" class="btn btn-sm btn-link border-0 pl-0 ml-0 mr-2" type="button">
           <span class="fs-s sku-span"><%= item.sku %></span>
         </a>
+        <span class="ml-0 pl-0 fs-s"><%= abbrv_tagline(item) %></span>
       </div>
-      <div class="col-11 border-0 ml-2 pl-1 pr-1 mr-0">
-        <span class="fs-s"><%= item.hattr('csv_tags', 'invoice_tagline') %></span>
+
+      <div class="col d-flex flex-row-reverse ml-0 pl-0 mr-1">
+        <%= render 'table_skus/nav_toggle', item: item %>
       </div>
     </div>
   </div>
-
-  <div class="card-body item-content pt-2 pb-1 px-1 bg-light rounded collapse" id="<%= dom_ref('navbar-forms', item) %>">
+  <div class="card-body item-content collapse pt-1 pb-1 px-1 bg-light rounded border-0 " id="<%= dom_ref('navbar-forms', item) %>">
   </div>
-
 </div>
