--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -4,7 +4,7 @@
 <hr>
 
 <div id="invoice-navbar-forms">
-  <%= render 'invoices/nav_bar', invoice: @invoice %>
+  <%= render 'invoices/navbar', invoice: @invoice, results: @nav_products, inputs: @nav_search_inputs %>
 </div>
 
 <hr>
