--- a/app/views/skus/search.js.erb
+++ b/app/views/skus/search.js.erb
@@ -1,1 +1,1 @@
-$("#search-skus").html("<%= j render 'skus/search', invoice: @invoice, results: @results, inputs: @inputs %>");
+$("#search-skus").html("<%= j render 'skus/search', invoice: @invoice, results: @nav_products, inputs: @nav_search_inputs %>");
