last push before new branch: batch_items

--- a/app/views/invoices/_navbar.html.erb
+++ b/app/views/invoices/_navbar.html.erb
@@ -11,7 +11,10 @@
         <a class="nav-link" data-toggle="collapse" href="#edit-invoice-toggle">Edit Invoice</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link new-skus" data-toggle="collapse" data-search="#search-skus" data-form="#new-skus" href="#new-skus-toggle">Add Skus</a>
+        <a class="nav-link new-skus" data-toggle="collapse" data-search="#search-skus" data-form="#new-skus" href="#new-skus-toggle">Add Product Skus</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="collapse" data-search="#search-item-skus" data-form="#new-item-skus" href="#new-item-skus-toggle">Add Item Skus</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#destroy-skus-toggle">Delete Skus</a>
