--- a/app/views/search_items/_form.html.erb
+++ b/app/views/search_items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: Item.new, url: invoice_search_items_path(invoice), id: "new-skus" do |f| %>
+<%= form_with model: Item.new, url: invoice_search_items_path(invoice), id: "new-item-skus" do |f| %>
   <div class="form">
 
     <div class="card bg-gray-d p-0 mb-1" data-target=".card-body">
