--- a/app/views/invoices/_navbar.html.erb
+++ b/app/views/invoices/_navbar.html.erb
@@ -5,7 +5,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse form-toggle" id="invoice-nav">
+  <div class="collapse navbar-collapse" id="invoice-nav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#edit-invoice-toggle">Edit Invoice</a>
@@ -30,7 +30,7 @@
   </div>
   <!-- <a class="badge badge-danger form-control-sm" href="<%#= supplier_invoice_path(invoice) %>" data-method="delete" data-remote="true" data-confirm="Are you sure?">Delete</a> -->
   <%= link_to invoice.supplier.supplier_name, invoice.supplier, class: 'badge badge-primary mr-2' %>
-  <%= link_to 'item-search', new_invoice_search_item_path(invoice), class: 'badge badge-primary mr-2' %>
+  <%#= link_to 'item-search', new_invoice_search_item_path(invoice), class: 'badge badge-primary mr-2' %>
   <%= link_to "delete", [invoice.supplier, invoice], method: :delete, class: 'badge badge-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
 </nav>
 
@@ -47,6 +47,21 @@
     <%= render 'skus/search', invoice: invoice, results: results, inputs: inputs %>
     <%= render 'skus/form', invoice: invoice, titles: [] %>
     <%= render 'titles/new', invoice: invoice %>
+  </div>
+</div>
+
+<div class="pos-f-t">
+  <div class="collapse" id="new-item-skus-toggle" data-parent="#invoice-navbar-forms">
+    <hr>
+    <div>
+      <%= render 'batch_items/search', invoice: invoice, inputs: item_inputs %>
+    </div>
+    <div>
+      <%= render 'batch_items/form', invoice: invoice %>
+    </div>
+    <div id="search-table">
+      <%= render 'batch_items/table', items: items %>
+    </div>
   </div>
 </div>
 
