--- a/app/views/skus/_destroy.html.erb
+++ b/app/views/skus/_destroy.html.erb
@@ -6,7 +6,7 @@
         <div class="col-4 ml-0">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'skus' %>
-            <%= f.text_field :skus, placeholder: "enter sku range", class: boot_classes(:input, 'required-field') %>
+            <%= f.text_field :skus, placeholder: "enter sku range", class: boot_classes(:input, 'required') %>
           </div>
         </div>
 
