refactoring navbar to use targets instead of hrefs

--- a/app/views/artists/search.js.erb
+++ b/app/views/artists/search.js.erb
@@ -1,2 +1,1 @@
-$("#artist-new").html("<%= j render 'artists/new' %>");
-$("#show-card").html("<%= j render 'artists/show', artist: @artist %>");
+$("#edit-artist-toggle").html("<%= j render 'artists/edit', artist: @artist %>");
