--- a/app/views/artists/update.js.erb
+++ b/app/views/artists/update.js.erb
@@ -1,1 +1,1 @@
-$("#artist-edit").html("<%= j render 'artists/edit', artist: @artist %>");
+$("#edit-artist-toggle").html("<%= j render 'artists/edit', artist: @artist %>");
