--- a/app/views/artists/nav/_nav_targets.html.erb
+++ b/app/views/artists/nav/_nav_targets.html.erb
@@ -1,4 +1,4 @@
-<div id="artist-navbar-forms">
+<div class="nav-parent" id="artist-navbar-forms">
   <hr>
   <div class="pos-f-t">
     <div class="collapse" id="add-artist-toggle" data-parent="#artist-navbar-forms">
