--- a/app/views/artists/nav/_navbar.html.erb
+++ b/app/views/artists/nav/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-purple">
-  <a class="navbar-brand text-white"><span id="artist-name">Artist</span></a>
+<nav class="navbar navbar-expand-sm navbar-light bg-primary" data-span="#artist-name" data-span-val="No Artist Selected" data-form="#artist-search" data-input="select">
+  <a class="navbar-brand text-white"><span class="artist-brand" id="artist-name">No Artist Selected</span></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#artist-nav">
     <span class="navbar-toggler-icon"></span>
