--- a/app/views/table_skus/_item.html.erb
+++ b/app/views/table_skus/_item.html.erb
@@ -1,20 +1,18 @@
-<div class="card p-1 mb-1 bg-disabled border-0" id="<%= dom_ref(:card, item) %>" data-target="#<%= dom_ref('navbar-forms', item) %>">
+<div class="card p-1 mb-1 bg-disabled border-0" id="<%= dom_ref(:card, item) %>" data-target="#<%= dom_ref('navbar-forms', item) %>" data-submit="a.show-body">
   <a href="<%= invoice_table_sku_path(item.invoice, item) %>" data-remote="true" class="show-body collapse" type="button"></a>
   <div class="card-header bg-transparent border-0 pt-0 pb-0 pr-0 mr-0">
-    <div class="row align-items-center">
+    <div class="row">
 
-      <div class="col-auto ml-0 pl-0 mr-0 pr-0">
-        <a href="<%= invoice_item_path(item.invoice, item) %>" class="btn btn-sm btn-link border-0 pl-0 ml-0 mr-2" type="button">
-          <span class="fs-s sku-span"><%= item.sku %></span>
-        </a>
-        <span class="ml-0 pl-0 fs-s"><%= abbrv_tagline(item) %></span>
+      <div class="col-auto p-0 pt-1 pr-0 ml-0 mr-0 my-0">
+        <span class="fs-s sku-span pt-1"><%= item.sku %></span>
+        <span class="ml-0 pl-0 fs-s pt-1"><%= abbrv_tagline(item) %></span>
       </div>
 
-      <div class="col d-flex flex-row-reverse ml-0 pl-0 mr-1">
-        <%= render 'table_skus/nav_toggle', item: item %>
+      <div class="col d-flex flex-row-reverse ml-0 pl-0 py-0 my-0 mr-1">
+        <%= render 'table_skus/nav/navbar', item: item %>
       </div>
     </div>
   </div>
-  <div class="card-body item-content collapse pt-1 pb-1 px-1 bg-light rounded border-0 " id="<%= dom_ref('navbar-forms', item) %>">
+  <div class="card-body collapse pt-1 pb-1 px-1 bg-light rounded border-0 " id="<%= dom_ref('navbar-forms', item) %>">
   </div>
 </div>
