refactored artist nav to use navData

--- a/app/views/table_skus/nav/_navbar.html.erb
+++ b/app/views/table_skus/nav/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-disabled border-0 p-0 m-0" data-parent="#<%= dom_ref('navbar-forms', item) %>" data-card="#<%= dom_ref(:card, item) %>">
+<nav class="navbar navbar-expand-sm navbar-light bg-disabled border-0 p-0 m-0" data-card="#<%= dom_ref(:card, item) %>">
   <div class="btn-group btn-group-sm p-0 m-0" role="group">
     <button id="<%= item.id %>" class="<%= boot_classes(:btn_nav, 'btn-outline-secondary', 'py-0', 'px-1', 'm-1') %>" type="button" data-target=".nav-toggle">
       <span class=""><%= (fa_icon "toggle-off") %></span>
