refactored data target/parent fns

--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -8,7 +8,7 @@
       </div>
 
       <div class="col d-flex flex-row-reverse mr-1">
-        <%= render 'invoices/nav_toggle', invoice: invoice %>
+        <%#= render 'invoices/nav_toggle', invoice: invoice %>
       </div>
     </div>
   </div>
