--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -5,7 +5,7 @@
         <div class="col-4 pt-2">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'artist' %>
-            <%= f.text_field :artist_name, class: boot_classes(:input, 'required-field') %>
+            <%= f.text_field :artist_name, class: boot_classes(:input, 'required') %>
           </div>
         </div>
 
@@ -14,7 +14,7 @@
         <div class="col-2 pt-2">
           <div class="input-group input-group-sm">
             <%= render "item_fields/label", label: 'id' %>
-            <%= f.number_field :artist_id, class: boot_classes(:input) %>
+            <%= f.number_field :artist_id, class: boot_classes(:input, 'required') %>
           </div>
         </div>
         <div class="col-md-1 offset-md-1 pt-2">
