--- a/app/views/table_skus/nav/_navbar.html.erb
+++ b/app/views/table_skus/nav/_navbar.html.erb
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-disabled border-0 p-0 m-0" data-card="#<%= dom_ref(:card, item) %>">
   <div class="btn-group btn-group-sm p-0 m-0" role="group">
-    <button id="<%= item.id %>" class="<%= boot_classes(:btn_nav, 'btn-outline-secondary', 'py-0', 'px-1', 'm-1') %>" type="button" data-target=".nav-toggle">
+    <button id="<%= item.id %>" class="<%= boot_classes(:btn_nav, 'btn-outline-secondary', 'py-0', 'px-1', 'm-1') %>" type="button" data-target="#<%= dom_ref('nav-toggle', item) %>">
       <span class=""><%= (fa_icon "toggle-off") %></span>
     </button>
-    <div class="item-nav nav-toggle m-0 mr-1 collapse">
+    <div class="item-nav nav-toggle m-0 mr-1 collapse" id="<%= dom_ref('nav-toggle', item) %>" data-parent="#item-table">
       <button type="button" class="btn btn-sm btn-outline-secondary squared-right-border squared-left-border py-0 px-1 mx-0 my-1 nav-btn disable dynamic" data-toggle="collapse" data-target="#description-toggle" disabled><span class="fs-s">Dscrp</span></button>
       <button type="button" class="btn btn-sm btn-outline-secondary py-0 px-1 mx-0 my-1 squared-right-border squared-left-border nav-btn disable dynamic" data-toggle="collapse" data-target="#edit-item-toggle" disabled><span class="fs-s">Item</span></button>
       <button type="button" class="btn btn-sm btn-outline-secondary py-0 px-1 mx-0 my-1 squared-left-border nav-btn disable dynamic" data-toggle="collapse" data-target="#edit-sku-toggle" disabled><span class="fs-s">Sku</span></button>
