refactored js file re toggle methods

--- a/app/views/artists/nav/_navbar.html.erb
+++ b/app/views/artists/nav/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-primary" data-span="#artist-name" data-span-val="No Artist Selected" data-brand="No Artist Selected" data-form="#artist-search" data-input="select">
+<nav class="navbar navbar-expand-sm navbar-light bg-primary" data-brand="No Artist Selected" data-form="#artist-search" data-input="select">
   <a class="navbar-brand text-white"><span class="artist-brand" id="artist-name">No Artist Selected</span></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#artist-nav">
