--- a/app/views/table_skus/_item.html.erb
+++ b/app/views/table_skus/_item.html.erb
@@ -1,8 +1,6 @@
-<div class="card p-1 mb-1 bg-disabled border-0" id="<%= dom_ref(:card, item) %>" data-target="#<%= dom_ref('navbar-forms', item) %>" data-submit="a.show-body">
-  <a href="<%= invoice_table_sku_path(item.invoice, item) %>" data-remote="true" class="show-body collapse" type="button"></a>
+<div class="card p-1 mb-1 bg-disabled border-0" id="<%= dom_ref(:card, item) %>">
   <div class="card-header bg-transparent border-0 pt-0 pb-0 pr-0 mr-0">
     <div class="row">
-
       <div class="col-auto p-0 pt-1 pr-0 ml-0 mr-0 my-0">
         <span class="fs-s sku-span pt-1"><%= item.sku %></span>
         <span class="ml-0 pl-0 fs-s pt-1"><%= abbrv_tagline(item) %></span>
