--- a/app/views/table_skus/nav/_navbar.html.erb
+++ b/app/views/table_skus/nav/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-disabled border-0 p-0 m-0" data-card="#<%= dom_ref(:card, item) %>">
+<nav class="navbar navbar-expand-sm navbar-light bg-disabled border-0 p-0 m-0">
   <div class="btn-group btn-group-sm p-0 m-0" role="group">
     <button id="<%= item.id %>" class="<%= boot_classes(:btn_nav, 'btn-outline-secondary', 'py-0', 'px-1', 'm-1') %>" type="button" data-target="#<%= dom_ref('nav-toggle', item) %>" data-submit="#<%= dom_ref('submit', item) %>">
       <span class=""><%= (fa_icon "toggle-off") %></span>
