--- a/app/views/item_fields/_caret.html.erb
+++ b/app/views/item_fields/_caret.html.erb
@@ -1,5 +1,1 @@
-<% if i == 0 && (body.blank? || context=='body') %>
-  <button id="<%= card_id %>" class="caret-toggle btn btn-sm bg-transparent mx-1 my-1 pl-2 py-0" type="button" <%= disable_btn(body) %>></button>
-<% elsif i == 0 %>
-  <button id="<%= card_id %>" class="caret-toggle btn btn-sm bg-transparent mx-1 my-1 pl-2 py-0" type="button"><%= (fa_icon "caret-right") %></button>
-<% end %>
+<button id="<%= card_id %>" class="<%= boot_classes(:caret, 'mx-1', 'my-1', 'pl-2', 'py-0') %>" data-target="<%= target %>" data-input="#caret-id" type="button"><%= caret_toggle(i, body, context) %></button>
