--- a/app/views/item_fields/_edit.html.erb
+++ b/app/views/item_fields/_edit.html.erb
@@ -8,15 +8,15 @@
         <div class="card-header border-0 bg-transparent pt-1 pb-1 pl-0 pr-0">
           <div class="form-row">
             <% card[:header].each do |f_hsh| %>
-              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: dom_ref(:show, card_id), card: card, i: f_hsh[:i], context: 'header' %>
+              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: dom_ref(:show, card_id), target: dom_ref('#edit-item-fields', card_id), card: card, i: f_hsh[:i], context: 'header' %>
             <% end %>
           </div>
         </div>
 
-        <div class="card-body pt-1 pb-1 pl-0 pr-0 bg-white border border-white border-top-0 rounded-bottom collapse">
+        <div class="card-body pt-1 pb-1 pl-0 pr-0 bg-white border border-white border-top-0 rounded-bottom collapse" id="<%= dom_ref('edit-item-fields', card_id) %>" data-parent="#<%= dom_ref('edit-item-fields', item) %>">
           <div class="form-row">
             <% card[:body].each do |f_hsh| %>
-              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: dom_ref(:show, card_id), card: card, i: f_hsh[:i], context: 'body' %>
+              <%= render "item_fields/form_row", f: f, f_hsh: f_hsh, card_id: dom_ref(:show, card_id), target: nil, card: card, i: f_hsh[:i], context: 'body' %>
             <% end %>
           </div>
         </div>
