--- a/app/views/skus/_form.html.erb
+++ b/app/views/skus/_form.html.erb
@@ -6,7 +6,7 @@
 
           <div class="col-4 pt-2">
             <div class="input-group input-group-sm">
-              <%= render "item_fields/caret", card_id: 'skus', body: true, i: 0, context: 'header' %>
+              <%= render "item_fields/caret", card_id: 'skus', target: '#new-skus-body', body: true, i: 0, context: 'header' %>
               <%= render "item_fields/label", label: 'skus' %>
               <%= f.text_field :skus, placeholder: "enter sku range", class: boot_classes(:input, 'required') %>
             </div>
@@ -18,12 +18,12 @@
         </div>
       </div>
 
-      <div class="card-body pt-1 pb-1 pl-0 pr-0 bg-gray-d border border-white border-top-0 rounded-bottom default-collapse collapse">
+      <div class="card-body pt-1 pb-1 pl-0 pr-0 bg-gray-d border border-white border-top-0 rounded-bottom default-collapse collapse" id="new-skus-body" data-parent="#new-skus">
 
         <div class="form-row pt-2 pb-2">
           <div class="col-4 ml-0">
             <div class="input-group input-group-sm">
-              <%= render "item_fields/caret", card_id: 'artist', body: true, i: 0, context: 'body' %>
+              <%= render "item_fields/caret", card_id: 'artist', target: nil, body: true, i: 0, context: 'body' %>
               <%= render "item_fields/label", label: 'artist' %>
               <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'artist_id'), id: "artist_id" %>
             </div>
@@ -40,7 +40,7 @@
         <div class="form-row">
           <div class="col-4 ml-0">
             <div class="input-group input-group-sm">
-              <%= render "item_fields/caret", card_id: 'title', body: true, i: 0, context: 'body' %>
+              <%= render "item_fields/caret", card_id: 'title', target: nil, body: true, i: 0, context: 'body' %>
               <%= render 'items/title_toggle' %>
               <%= render 'items/title', titles: titles %>
               <%= f.text_field :title, class: boot_classes(:input, 'default-show', 'show', 'title-toggle'), id: 'title-text' %>
