refactored search functions

--- a/app/views/items/_title.html.erb
+++ b/app/views/items/_title.html.erb
@@ -1,1 +1,1 @@
-<%= select(:item, :title, titles, {include_blank: true}, class: boot_classes(:input, 'default-collapse', 'collapse', 'title-toggle', 'field-param'), id: 'title-select') %>
+<%= select(:item, :title, titles, {include_blank: true}, class: boot_classes(:input, 'default-collapse', 'collapse', 'title', 'title-toggle', 'title-select', 'field-param'), id: 'title-select') %>
