--- a/app/views/skus/_search.html.erb
+++ b/app/views/skus/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: Item.new, url: search_invoice_skus_path(invoice), method: :get, id: "search-skus" do |f| %>
-  
+
   <div class="form">
     <div class="card bg-gray-d p-1 mb-1">
       <div class="form-row mb-2">
@@ -14,18 +14,18 @@
 
       <div class="form-row">
         <div class="col-3 ml-0">
-          <div class="input-group input-group-sm">
+          <div class="input-group input-group-sm" data-form="#new-title" data-input=".artist" data-context="#new-skus" data-obj="searchForm, #search-skus, titleForm, #new-title, artistInput, .artist, itemForm, #new-skus, titleInput, .title, context_input, .context">
             <%= render 'item_products/forms/search_label', input_name: 'artist' %>
-            <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select') %>
+            <%= render 'item_products/forms/reset_search', class_param: 'new-item-unselect-artist' %>
+            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, id: "artist-search", class: boot_classes(:search_input, 'artist', 'new-item-select-artist') %>
           </div>
         </div>
 
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm">
+          <div class="input-group input-group-sm" data-form="#new-title" data-input=".product" data-context="#new-skus">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= f.collection_select :product_id, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, id: "product-search", class: boot_classes(:search_input, 'product-select') %>
+            <%= f.collection_select :product_id, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, id: "product-search", class: boot_classes(:search_input, 'search-select', 'product-select') %>
           </div>
         </div>
       </div>
