--- a/app/views/titles/new.js.erb
+++ b/app/views/titles/new.js.erb
@@ -1,1 +1,1 @@
-$("#title-select").html("<%= j render 'items/title', titles: @titles %>");
+$("<%= @target %>").find(".title-select").html("<%= j render 'items/title', titles: @titles %>");
