--- a/app/views/batch_items/_form.html.erb
+++ b/app/views/batch_items/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: Item.new, url: invoice_batch_items_path(invoice), id: "new-item-skus" do |f| %>
   <div class="form">
 
-    <div class="card bg-gray-d p-0 mb-1" data-target=".card-body">
+    <div class="card bg-gray-d p-0 mb-1">
       <%= number_field_tag "item_id", nil, class: "collapse required", id: "item_id" %>
 
       <div class="card-header bg-transparent pt-0 pb-1 pl-0 pr-0">
@@ -25,18 +25,18 @@
 
         <div class="form-row pt-2 pb-2 pr-2">
           <div class="col-4 ml-0">
-            <div class="input-group input-group-sm">
+            <div class="input-group input-group-sm title">
               <%= render "item_fields/caret", card_id: 'artist', target: nil, body: true, i: 0, context: 'body' %>
               <%= render "item_fields/label", label: 'artist' %>
-              <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'artist_id'), id: "artist_id" %>
+              <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'artist', 'artist_id'), id: "artist_id" %>
             </div>
           </div>
 
           <div class="col-4 ml-0">
-            <div class="input-group input-group-sm">
+            <div class="input-group input-group-sm" data-input=".title-text" data-target=".title-toggle">
               <%= render 'items/title_toggle' %>
               <%= render 'items/title', titles: [] %>
-              <%= f.text_field :title, class: boot_classes(:input, 'default-show', 'show', 'title-toggle'), id: 'title-text' %>
+              <%= f.text_field :title, class: boot_classes(:input, 'show', 'title-toggle', 'title-text'), id: 'title-text' %>
             </div>
           </div>
 
