--- a/app/views/batch_items/_search.html.erb
+++ b/app/views/batch_items/_search.html.erb
@@ -5,7 +5,7 @@
       <div class="form-row mt-1">
         <% rejected_inputs(inputs['hattrs'], 'measurements', 'edition').each do |input| %>
           <div class="col-3 ml-0">
-            <div class="input-group input-group-sm" data-form="#search-items">
+            <div class="input-group input-group-sm">
               <%= render 'item_products/forms/search_group', scope: 'hattrs', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
             </div>
           </div>
@@ -15,7 +15,7 @@
 
       <div class="form-row">
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm" data-form="#search-items">
+          <div class="input-group input-group-sm" data-form="#new-title" data-input=".artist" data-context="#new-item-skus">
             <%= render 'item_products/forms/search_label', input_name: 'artist' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
             <%= select "items", "artist_id", inputs['artist']['opts'].map{|a| [a.artist_name, a.id]}, {include_blank: true, selected: inputs['artist']['selected']}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select')} %>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm" data-form="#search-items">
+          <div class="input-group input-group-sm">
             <%= render 'item_products/forms/search_label', input_name: 'title' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
             <%= select "items", "title", inputs['title']['opts'], {include_blank: true, selected: inputs['title']['selected']}, {class: boot_classes(:search_input, 'search-select', 'title-select')} %>
@@ -34,7 +34,7 @@
 
       <div class="form-row mb-1">
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm" data-form="#search-items">
+          <div class="input-group input-group-sm" data-form="#new-title" data-input=".artist" data-context="#new-item-skus">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
             <%= select "items", "product_id", inputs['product']['opts'].map{|a| [a.product_name, a.id]}, {include_blank: true, selected: inputs['product']['selected']}, {class: boot_classes(:search_input, 'search-select', 'product-select')} %>
@@ -43,7 +43,7 @@
 
         <% included_inputs(inputs['hattrs'], 'measurements', 'edition').each do |input| %>
           <div class="col-3 ml-0">
-            <div class="input-group input-group-sm" data-form="#search-items">
+            <div class="input-group input-group-sm">
               <%= render 'item_products/forms/search_group', scope: 'hattrs', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
             </div>
           </div>
