--- a/app/views/item_products/forms/_search.html.erb
+++ b/app/views/item_products/forms/_search.html.erb
@@ -6,14 +6,14 @@
       <div class="form-row px-1">
         <% inputs.each do |input| %>
           <div class="col-3 border-light-gray p-1">
-            <div class="input-group input-group-sm" data-form="#<%= dom_ref('search-item-product', item) %>">
+            <div class="input-group input-group-sm">
               <%= render 'item_products/forms/search_group', scope: 'search', input_name: input['input_name'], opts: input['opts'], selected: input['selected'] %>
             </div>
           </div>
         <% end %>
 
         <div class="col-6 border-light-gray p-1">
-          <div class="input-group input-group-sm" data-input="item[product_id]" data-form="#<%= dom_ref('edit-item', item) %>">
+          <div class="input-group input-group-sm" data-form="#<%= dom_ref('edit-item', item) %>" data-input=".product">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
             <%= render 'item_products/forms/reset_search', class_param: 'deselect' %>
             <%= f.collection_select :product, products, :id, :product_name, {include_blank: true, selected: item.product.try(:id)}, id: "product-select", class: boot_classes(:search_input, 'update-search') %>
