--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: item, url: invoice_item_path(invoice, item), id: dom_ref('edit-item', item) do |f| %>
   <div class="form">
-    <div class="card border-0 p-0 mb-1 <%=table_strip(1)%>">
-      <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "collapse" %>
+    <div class="card border-0 p-0 mb-1 <%= table_strip(1)%>">
+      <%= number_field_tag "item[product_id]", @item.product.try(:id), class: "product collapse" %>
 
       <div class="form-row pl-1 py-0 ml-0 mb-1">
 
@@ -16,7 +16,7 @@
           <div class="input-group input-group-sm">
             <%= render 'items/title_toggle' %>
             <%= render 'items/title', titles: titles %>
-            <%= f.text_field :title, class: boot_classes(:input, 'default-show', 'show', 'title-toggle', 'field-param'), id: 'title-text' %>
+            <%= f.text_field :title, class: boot_classes(:input, 'show', 'title-toggle', 'field-param'), id: 'title-text' %>
           </div>
         </div>
 
