--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -16,7 +16,7 @@
           <div class="input-group input-group-sm">
             <%= render 'items/title_toggle' %>
             <%= render 'items/title', titles: titles %>
-            <%= f.text_field :title, class: boot_classes(:input, 'show', 'title-toggle', 'field-param'), id: 'title-text' %>
+            <%= f.text_field :title, class: boot_classes(:input, 'show', 'title', 'title-toggle', 'field-param'), id: 'title-text' %>
           </div>
         </div>
 
