--- a/app/views/skus/_form.html.erb
+++ b/app/views/skus/_form.html.erb
@@ -22,17 +22,17 @@
 
         <div class="form-row pt-2 pb-2">
           <div class="col-4 ml-0">
-            <div class="input-group input-group-sm">
+            <div class="input-group input-group-sm" data-obj="searchForm, #search-skus, titleForm, #new-title, artistInput, .artist, itemForm, #new-skus, titleInput, .title, context_input, .context">
               <%= render "item_fields/caret", card_id: 'artist', target: nil, body: true, i: 0, context: 'body' %>
               <%= render "item_fields/label", label: 'artist' %>
-              <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'artist', 'artist_id'), id: "artist_id" %>
+              <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true}, class: boot_classes(:input, 'search', 'new', 'item', 'artist'), id: "new-skus-artist" %>
             </div>
           </div>
 
           <div class="col-6 ml-0">
-            <div class="input-group input-group-sm">
+            <div class="input-group input-group-sm" data-obj="searchForm, #search-skus, productInput, .product, itemForm, #new-skus">
               <%= render "item_fields/label", label: 'product' %>
-              <%= f.collection_select :product_id, Product.all, :id, :product_name, {include_blank: true}, class: boot_classes(:input, 'product', 'product_id'), id: "product_id" %>
+              <%= f.collection_select :product_id, Product.all, :id, :product_name, {include_blank: true}, class: boot_classes(:input, 'product', 'new-item-select-product'), id: "product_id" %>
             </div>
           </div>
         </div>
