--- a/app/views/batch_items/_search.html.erb
+++ b/app/views/batch_items/_search.html.erb
@@ -15,10 +15,10 @@
 
       <div class="form-row">
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm" data-form="#new-title" data-input=".artist" data-context="#new-item-skus">
+          <div class="input-group input-group-sm" data-obj="searchForm, #search-item-skus, titleForm, #new-title, artistInput, .artist, itemForm, #new-item-skus, titleInput, .title, context_input, .context">
             <%= render 'item_products/forms/search_label', input_name: 'artist' %>
-            <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= select "items", "artist_id", inputs['artist']['opts'].map{|a| [a.artist_name, a.id]}, {include_blank: true, selected: inputs['artist']['selected']}, {id: "artist-search", class: boot_classes(:search_input, 'search-select', 'artist-select')} %>
+            <%= render 'item_products/forms/reset_search', class_param: 'new-item-unselect-artist' %>
+            <%= select "items", "artist_id", inputs['artist']['opts'].map{|a| [a.artist_name, a.id]}, {include_blank: true, selected: inputs['artist']['selected']}, {id: "artist-search-item-skus", class: boot_classes(:search_input, 'search', 'new', 'item', 'artist')} %>
           </div>
         </div>
 
