--- a/app/views/skus/_search.html.erb
+++ b/app/views/skus/_search.html.erb
@@ -14,18 +14,18 @@
 
       <div class="form-row">
         <div class="col-3 ml-0">
-          <div class="input-group input-group-sm" data-form="#new-title" data-input=".artist" data-context="#new-skus" data-obj="searchForm, #search-skus, titleForm, #new-title, artistInput, .artist, itemForm, #new-skus, titleInput, .title, context_input, .context">
+          <div class="input-group input-group-sm" data-obj="searchForm, #search-skus, titleForm, #new-title, artistInput, .artist, itemForm, #new-skus, titleInput, .title, context_input, .context">
             <%= render 'item_products/forms/search_label', input_name: 'artist' %>
             <%= render 'item_products/forms/reset_search', class_param: 'new-item-unselect-artist' %>
-            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, id: "artist-search", class: boot_classes(:search_input, 'artist', 'new-item-select-artist') %>
+            <%= f.collection_select :artist_id, Artist.all, :id, :artist_name, {include_blank: true, selected: inputs['artist']}, id: "artist-search", class: boot_classes(:search_input, 'search', 'new', 'item', 'artist') %>
           </div>
         </div>
 
         <div class="col-6 ml-0">
-          <div class="input-group input-group-sm" data-form="#new-title" data-input=".product" data-context="#new-skus">
+          <div class="input-group input-group-sm" data-obj="searchForm, #search-skus, productInput, .product, itemForm, #new-skus">
             <%= render 'item_products/forms/search_label', input_name: 'product' %>
-            <%= render 'item_products/forms/reset_search', class_param: 'unselect' %>
-            <%= f.collection_select :product_id, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, id: "product-search", class: boot_classes(:search_input, 'search-select', 'product-select') %>
+            <%= render 'item_products/forms/reset_search', class_param: 'new-item-unselect-product' %>
+            <%= f.collection_select :product_id, results, :id, :product_name, {include_blank: true, selected: inputs['product']}, id: "product-search", class: boot_classes(:search_input, 'product', 'new-item-select-product') %>
           </div>
         </div>
       </div>
