--- a/app/views/item_products/update.js.erb
+++ b/app/views/item_products/update.js.erb
@@ -1,3 +1,4 @@
 $("#<%= dom_ref('edit-item-fields', @item) %>").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
 $("#<%= dom_ref('edit-item', @item) %>").html("<%= j render 'items/edit', invoice: @item.invoice, item: @item %>");
 $("#<%= dom_ref('search-item-product', @item) %>").html("<%= j render 'item_products/forms/search', item: @item, inputs: @inputs %>");
+$("#<%= dom_ref('tagline', @item) %>").html("<%= j render 'table_skus/abbrv_tagline', item: @item %>");
