--- a/app/views/invoices/_navbar.html.erb
+++ b/app/views/invoices/_navbar.html.erb
@@ -11,10 +11,10 @@
         <a class="nav-link" data-toggle="collapse" href="#edit-invoice-toggle">Edit Invoice</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link new-skus" data-toggle="collapse" data-search="#search-skus" data-form="#new-skus" data-input="#title-select" href="#new-skus-toggle">Add Product Skus</a>
+        <a class="nav-link new-skus" data-toggle="collapse" data-search="#search-skus" data-form="#new-skus" data-input="#title-select" data-obj="searchForm, #search-skus, itemForm, #new-skus, titleSelect, .title-select, titleForm, #new-title, caret, .caret-toggle" href="#new-skus-toggle">Add Product Skus</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-toggle="collapse" data-search="#search-item-skus" data-form="#new-item-skus" data-input="#title-select" href="#new-item-skus-toggle">Add Item Skus</a>
+        <a class="nav-link" data-toggle="collapse" data-search="#search-item-skus" data-form="#new-item-skus" data-input="#title-select" data-obj="searchForm, #search-item-skus, itemForm, #new-item-skus, titleSelect, .title-select, titleForm, #new-title, caret, .caret-toggle" href="#new-item-skus-toggle">Add Item Skus</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#destroy-skus-toggle">Delete Skus</a>
@@ -30,7 +30,6 @@
   </div>
   <!-- <a class="badge badge-danger form-control-sm" href="<%#= supplier_invoice_path(invoice) %>" data-method="delete" data-remote="true" data-confirm="Are you sure?">Delete</a> -->
   <%= link_to invoice.supplier.supplier_name, invoice.supplier, class: 'badge badge-primary mr-2' %>
-  <%#= link_to 'item-search', new_invoice_search_item_path(invoice), class: 'badge badge-primary mr-2' %>
   <%= link_to "delete", [invoice.supplier, invoice], method: :delete, class: 'badge badge-danger form-control-sm', data: { confirm: 'Are you sure?' } %>
 </nav>
 
