--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -2,3 +2,4 @@ $("#<%= dom_ref('search-item-product', @item) %>").html("<%= j render 'item_prod
 $("#<%= dom_ref('edit-item', @item) %>").html("<%= j render 'items/edit', invoice: @invoice, item: @item, titles: @titles, rows: @rows %>");
 $("#<%= dom_ref('edit-item-fields', @item) %>").html("<%= j render 'item_fields/edit', item: @item, rows: @rows %>");
 $("#description-toggle").html("<%= j render 'items/description', item: @item %>");
+$("#<%= dom_ref('tagline', @item) %>").html("<%= j render 'table_skus/abbrv_tagline', item: @item %>");
